# Record-Audio-Program

./: README.md  app.py  app.spec  pyproject.toml  record_audio_app.py  requirements.txt
src/: app.py
src/constants/: messages.py  paths.py
src/core/: paths.py
src/models/: Audio.py  InterfaceApp.py  __init__.py  audio_model.py  audio_t.py  interface_app.py
src/ui/: interface_app.py  styles.py
src/ui/components/: record_controls.py
src/ui/views/: main_view.py
src/utils/: constants.py
test/: conftest.py  constants.py
test/test_constants/: test_messages.py
test/test_models/: test_Audio.py  test_InterfaceApp.py  test_audio.py  test_audio_model.py  test_interface_app.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_record_controls.py
test/test_ui/test_views/: test_main_view.py
test/test_utils/: test_helpers.py
